--- a/ecommerce-tools/templates/subscription/buy_credits.html.twig
+++ b/ecommerce-tools/templates/subscription/buy_credits.html.twig
@@ -94,7 +94,7 @@
                         <p class="text-muted">
                             Contact us for custom credit packages or bulk credit purchases.
                         </p>
-                        <a href="#" class="btn btn-outline-primary">
+                        <a href="{{ path('app_support') }}" class="btn btn-outline-primary">
                             <i class="fas fa-envelope"></i> Contact Sales
                         </a>
                     </div>
