--- a/ecommerce-tools/templates/subscription/plans.html.twig
+++ b/ecommerce-tools/templates/subscription/plans.html.twig
@@ -244,7 +244,7 @@
                                             After subscribing, you can purchase additional credit packs or contact us for custom enterprise solutions.
                                         {% endif %}
                                     </p>
-                                    <a href="#" class="btn btn-outline-primary btn-lg px-4">
+                                    <a href="{{ path('app_support') }}" class="btn btn-outline-primary btn-lg px-4">
                                         <i class="fas fa-envelope me-2"></i> Contact Sales
                                     </a>
                                 </div>
