--- a/ecommerce-tools/templates/components/footer.html.twig
+++ b/ecommerce-tools/templates/components/footer.html.twig
@@ -6,18 +6,14 @@
                 <h5 class="text-primary">Seller's Bay</h5>
                 <p class="text-muted">Empowering e-commerce merchants with AI-powered tools and seamless WooCommerce integration.</p>
                 <div class="d-flex gap-2">
-                    <a href="#" class="text-primary"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-primary"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-primary"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="text-primary"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/sellersbay/" class="text-primary" target="_blank" rel="nofollow"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-md-2">
                 <h6 class="text-primary">Quick Links</h6>
                 <ul class="list-unstyled">
-                    <li><a href="http://localhost/sellersbay/" class="text-decoration-none text-muted">Home</a></li>
+                    <li><a href="https://www.sellersbay.com" class="text-decoration-none text-muted">Seller's Bay Home</a></li>
                     <li><a href="{{ path('app_dashboard') }}" class="text-decoration-none text-muted">Dashboard</a></li>
-                    <li><a href="{{ path('app_products') }}" class="text-decoration-none text-muted">Products</a></li>
                     <li><a href="{{ path('app_support') }}" class="text-decoration-none text-muted">Support</a></li>
                 </ul>
             </div>
@@ -25,18 +21,24 @@
                 <h6 class="text-primary">Resources</h6>
                 <ul class="list-unstyled">
                     <li><a href="#" class="text-decoration-none text-muted">Documentation</a></li>
-                    <li><a href="#" class="text-decoration-none text-muted">API</a></li>
-                    <li><a href="#" class="text-decoration-none text-muted">Blog</a></li>
-                    <li><a href="#" class="text-decoration-none text-muted">Tutorials</a></li>
+                    <li><a href="https://www.sellersbay.com/blog" class="text-decoration-none text-muted">Blog</a></li>
+                    <li><a href="https://www.sellersbay.com/tutorials" class="text-decoration-none text-muted">Tutorials</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h6 class="text-primary">Contact Us</h6>
                 <ul class="list-unstyled text-muted">
                     <li><i class="fas fa-envelope me-2"></i> support@sellersbay.com</li>
-                    <li><i class="fas fa-phone me-2"></i> (123) 456-7890</li>
-                    <li><i class="fas fa-map-marker-alt me-2"></i> 123 E-Commerce St, Digital City</li>
+                    <li><i class="fas fa-phone me-2"></i> (407) 501-6824 #800</li>
+                    <li><i class="fas fa-map-marker-alt me-2"></i> Mailing Address</li>
+                    <li class="ms-4">Seller's Bay, LLC</li>
+                    <li class="ms-4">2875 S Orange Ave</li>
+                    <li class="ms-4">STE 500 #6207, Orlando, FL 32806</li>
                 </ul>
+                <div class="mt-3">
+                    <p class="text-muted mb-1"><i class="fas fa-credit-card me-2"></i> We accept all major credit cards</p>
+                    <p class="text-muted"><i class="fas fa-lock me-2"></i> Secure shopping guaranteed</p>
+                </div>
             </div>
         </div>
         <hr>
